19-04-2019 Menambah data detail

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Kerajaan Hindu-Budha Di Indonesia </string>
     <string name="list">List</string>
     <string name="grid">Grid</string>
     <string name="cardview">with CardView</string>
